--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -11,12 +11,13 @@
   border: 1px solid black;
   height: 100%;
   width: 45%;
+  background: linear-gradient(10deg, #b3b3b3, #f2f2f2 55%);
 }
 
 .container-right {
   display: flex;
-  flex-wrap: wrap;
   width: 50%;
+  height: auto;
 }
 
 .item-1,
@@ -27,4 +28,5 @@
   width: 50%;
   background-color: black;
   color: white;
+  margin: 5px;
 }
