--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -4,13 +4,14 @@
   height: 90vh;
   margin: 5em 0;
   width: 100%;
+  font-family: Helvetica, sans-serif;
 }
 
 .container-left {
   flex-basis: 45%;
   flex-wrap: wrap;
   margin-right: 10px;
-  background: linear-gradient(10deg, #ffddcc, white);
+  background: linear-gradient(10deg, #e6e6e6, white);
 }
 
 .container-left:hover {
@@ -29,7 +30,7 @@
 .item {
   flex-basis: calc(50% - 15px);
   text-align: center;
-  background-color: #ffddcc;
+  background: linear-gradient(25deg, #e6e6e6, #f2f2f2);
 }
 
 .item:hover {
@@ -59,20 +60,27 @@
 /* images */
 
 .img {
-  max-width: 35%;
-  padding-top: 10%;
+  max-width: 30%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .img-left {
-  padding-top: 15%;
-  max-width: 50%;
+  padding-top: 10%;
+  max-width: 40vw;
+  max-height: 40vh;
 }
 
 .img:hover {
-  transform: scale(1.2);
+  transform: scale(1.3);
+  transition: 0.4s;
+}
+
+.text-product {
+  padding-bottom: 2vh;
+  font-size: 1.2vw;
+  text-align: center;
 }
 
 /* responsiveness */
@@ -81,7 +89,13 @@
   .main-container {
     height: 70vh;
   }
+
+  .text-product {
+    padding-bottom: 2vh;
+    font-size: 1.5vw;
+  }
 }
+
 @media (max-width: 570px) {
   .item {
     flex-basis: calc(50% - 20px);
@@ -100,5 +114,14 @@
     width: 100%;
     flex-basis: 20%;
     margin-bottom: 10px;
+  }
+
+  .img {
+    max-width: 35%;
+  }
+
+  .text-product {
+    padding-bottom: 2vh;
+    font-size: 3vw;
   }
 }
